# free-space-check

./: .gitignore  CLAUDE.md  README.md  add_ignore.bat  pyproject.toml  start.bat  watch.bat
src/free_space_check/: __main__.py  config.py  csv_export.py  formatter.py  ignore_file.py  logging_setup.py  scanner.py  watcher.py
tests/: test_config.py  test_formatter.py  test_ignore_file.py  test_scanner.py
tests/integration/: test_full_scan.py
tools/: run_integration_tests.bat
